--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,21 @@
-- title: Start
+- title: Home
   url: "/"
   side: left
 
-- title: Getting Started
+- title: About
   url: "/getting-started/"
   side: left
+  dropdown:
+  - title: "Grid & Colors"
+    url: "/design/grid/"
+  - title: "Typography"
+    url: "/design/typography/typography/"
 
-- title: "Templates"
+- title: News
+  url: "/blog/"
+  side: left
+
+- title: Sales
   url: "/design/"
   side: left
   dropdown:
@@ -31,44 +40,10 @@
   - title: "Portfolio"
     url: "/design/portfolio/"
 
-- title: "Header Styles"
-  url: "/headers/"
-  side: left
-  dropdown:
-  - title: "Header with Full-Width-Image"
-    url: "/design/header-full-width-image/"
-  - title: "Header with Image and Pattern"
-    url: "/design/header-image-pattern/"
-  - title: "Header with image and color"
-    url: "/design/header-image-color/"
-  - title: "Header Only With Logo"
-    url: "/design/header-logo-only/"
-  - title: "Header With Text"
-    url: "/design/header-with-text/"
-  - title: "No Header"
-    url: "/design/no-header/"
-  - title: "No Header but Image"
-    url: "/design/no-header-but-image/"
 
-- title: Documentation
-  url: "/documentation/"
-  side: left
-  dropdown:
-  - title: "Changelog"
-    url: "/changelog/"
-  - title: "Roadmap"
-    url: "/roadmap/"
-
-- title: Blog
-  url: "/blog/"
-  side: left
-  dropdown:
-  - title: "Blog Archive"
-    url: "/blog/archive/"
-
-- title: "Search"
+- title: "Camp"
   url: "/search/"
-  side: right
+  side: left
 
 - title: "Contact"
   url: "/contact/"
