--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,17 +1,5 @@
-- menu_name: "Services"
+- menu_name: "More"
 
 - name: "Contact"
-  url: "/contact/"
+  url: "/contact-us/"
   title: "Contact"
-
-- name: "RSS"
-  url: "/feed.xml"
-  title: "Subscribe to RSS Feed"
-
-- name: "Atom"
-  url: "/atom.xml"
-  title: "Subscribe to Atom Feed"
-
-- name: "sitemap.xml"
-  url: "/sitemap.xml"
-  title: "Sitemap for Google Webmaster Tools"
